[gd_scene load_steps=10 format=3 uid="uid://dslewxenm5axe"]

[ext_resource type="Texture2D" uid="uid://hnbn730dchc5" path="res://worlds/island/entities/npc/sprites/robotmini.png" id="1_sws6s"]
[ext_resource type="Script" path="res://global/ui/robot_tips/robot_tips.gd" id="1_xp0r2"]
[ext_resource type="PackedScene" uid="uid://xhh03hxqgeo3" path="res://global/managers/conversing_manager.tscn" id="2_gfjuk"]
[ext_resource type="Texture2D" uid="uid://dergd86s25ao" path="res://worlds/island/entities/npc/sprites/robotmini_talk.png" id="3_j1qdh"]
[ext_resource type="PackedScene" uid="uid://ci2cv5dlrqdel" path="res://global/managers/dialog_manager.tscn" id="5_euh0t"]

[sub_resource type="Animation" id="Animation_37xwh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_sws6s")]
}

[sub_resource type="Animation" id="Animation_jl4fr"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_sws6s")]
}

[sub_resource type="Animation" id="Animation_ty1dl"]
resource_name = "talking"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_j1qdh"), ExtResource("1_sws6s")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hs7xe"]
_data = {
"RESET": SubResource("Animation_37xwh"),
"idle": SubResource("Animation_jl4fr"),
"talking": SubResource("Animation_ty1dl")
}

[node name="RobotTips" type="Control" groups=["robot_tips"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xp0r2")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Robot" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1473.0
offset_top = 723.0
offset_right = 1985.0
offset_bottom = 1235.0
texture = ExtResource("1_sws6s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Robot"]
libraries = {
"": SubResource("AnimationLibrary_hs7xe")
}

[node name="ConversingManager" parent="." node_paths=PackedStringArray("dialog_manager") instance=ExtResource("2_gfjuk")]
dialog_manager = NodePath("../DialogManager")
dialog_start_delay = 0.5

[node name="DialogManager" parent="." instance=ExtResource("5_euh0t")]
position = Vector2(1380, 637)

[connection signal="text_ended" from="DialogManager" to="." method="_on_dialog_manager_text_ended"]
[connection signal="text_started" from="DialogManager" to="." method="_on_dialog_manager_text_started"]
